--- a/.github/workflows/cv-arxiv-daily.yml
+++ b/.github/workflows/cv-arxiv-daily.yml
@@ -1,33 +1,33 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Run Arxiv Papers Daily
+name: Run Arxiv Papers Daily 
 
-# Controls when the workflow will run
+# Controls when the workflow will run 
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # Allows you to run this workflow manually from the Actions tab 
+  workflow_dispatch: 
   schedule:
     - cron:  "0 0/12 * * *"  #'*/60 * * * *'
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push or pull request events but only for the main branch 
 #   push:
 #     branches:
-#     - main
+#     - main 
 
 env:
 
-  GITHUB_USER_NAME: Vincentqyw
-  GITHUB_USER_EMAIL: realcat@126.com
+  GITHUB_USER_NAME: Liaoyu520Yuanyuan 
+  GITHUB_USER_EMAIL: 310898271@qq.com 
   
   
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel 
 jobs:
   # This workflow contains a single job called "build"
   build:
     name: update
-    # The type of runner that the job will run on
+    # The type of runner that the job will run on 
     runs-on: ubuntu-latest
     
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # Steps represent a sequence of tasks that will be executed as part of the job 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          #architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+          #architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -51,7 +51,7 @@ jobs:
       - name: Push new cv-arxiv-daily.md
         uses: github-actions-x/commit@v2.9
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }} 
           commit-message: "Github Action Automatic Update CV Arxiv Papers"
           files: README.md docs/cv-arxiv-daily.json docs/cv-arxiv-daily-web.json docs/index.md docs/cv-arxiv-daily-wechat.json docs/wechat.md
           rebase: 'true'
